<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_fragment"
            android:icon="@drawable/bill"
            android:title="@string/title_section1"
            android:checked="true"/>
        <item
            android:id="@+id/nav_second_fragment"
            android:icon="@drawable/devices"
            android:title="@string/title_section2"
            />
        <item
            android:id="@+id/nav_third_fragment"
            android:icon="@drawable/rooms"
            android:title="@string/title_section3" />

        <item
            android:id="@+id/nav_fourth_fragment"
            android:icon="@drawable/calculator"
            android:title="@string/title_section4" />

        <item
            android:id="@+id/nav_fifth_fragment"
            android:icon="@drawable/tips"
            android:title="@string/title_section5" />

        <item
            android:id="@+id/nav_sixth_fragment"
            android:icon="@drawable/help"
            android:title="@string/title_section6" />
        <item
            android:id="@+id/nav_seventh_fragment"
            android:icon="@drawable/about"
            android:title="@string/title_section7" />
        <item
            android:id="@+id/nav_eighth_fragment"
            android:icon="@drawable/home_automation"
            android:title="@string/title_section8" />
    </group>
</menu>