<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    >


    <!--<ImageButton
        android:id="@+id/device_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/ic_action_camera" /> -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/updateDevice_scrollView"
        android:layout_above="@+id/btn_edit_device">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/updateDevice_device_name_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nome do dispositivo: "
                android:textStyle="bold"
                android:textColor="@color/AppThemeColor"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="5dp"
                android:layout_marginBottom="0dp"/>

            <TextView
                android:id="@+id/updateDevice_device_pot_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Potência do dispositivo (Watts): "
                android:textColor="@color/AppThemeColor"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@+id/updateDevice_device_name_textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="5dp"
                android:layout_marginBottom="0dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/updateDevice_device_pot"
                android:textColorHighlight="@color/textColorHighlight"
                android:textColor="@color/AppThemeColor"
                android:shadowColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:inputType="numberDecimal"
                android:layout_below="@+id/updateDevice_device_pot_textView"
                android:layout_alignLeft="@+id/updateDevice_device_time_textView"
                android:layout_alignStart="@+id/updateDevice_device_time_textView"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:layout_alignEnd="@+id/updateDevice_imageSwitcher" />
            <TextView
                android:id="@+id/updateDevice_number_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Quantidade: "
                android:paddingTop="4dip"
                android:textColor="@color/AppThemeColor"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@+id/updateDevice_device_pot"
                android:layout_alignLeft="@+id/updateDevice_device_pot_textView"
                android:layout_alignStart="@+id/updateDevice_device_pot_textView" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/updateDevice_number"
                android:text="1"
                android:textColorHighlight="@color/textColorHighlight"
                android:textColor="@color/AppThemeColor"
                android:shadowColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_below="@+id/updateDevice_device_pot"
                android:layout_toRightOf="@+id/updateDevice_number_textView"
                android:layout_alignRight="@+id/updateDevice_device_pot"
                android:layout_alignEnd="@+id/updateDevice_device_pot"
                android:singleLine="true"
                android:imeOptions="actionNext"
                />

            <TextView
                android:id="@+id/updateDevice_device_time_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tempo médio de uso diário: "
                android:textColor="@color/AppThemeColor"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@+id/updateDevice_number"
                android:layout_alignLeft="@+id/updateDevice_device_pot_textView"
                android:layout_alignStart="@+id/updateDevice_device_pot_textView" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/updateDevice_device_time"
                android:text="24"
                android:textColorHighlight="@color/textColorHighlight"
                android:textColor="@color/AppThemeColor"
                android:shadowColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_below="@+id/updateDevice_device_time_textView"
                android:layout_alignLeft="@+id/updateDevice_device_time_textView"
                android:layout_alignStart="@+id/updateDevice_device_time_textView"
                android:layout_toStartOf="@+id/updateDevice_radio_group"
                android:layout_alignRight="@+id/updateDevice_device_time_textView"
                android:layout_alignEnd="@+id/updateDevice_device_time_textView"
                android:singleLine="true"
                android:imeOptions="actionNext"
                />

            <RadioGroup
                android:id="@+id/updateDevice_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/updateDevice_device_time_textView"
                android:layout_toRightOf="@+id/updateDevice_device_time_textView"
                android:layout_toEndOf="@+id/updateDevice_device_time_textView">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Horas"
                    android:id="@+id/updateDevice_radio_horas"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"
                    android:textColor="@color/AppThemeColor"
                    android:layout_alignBottom="@+id/updateDevice_device_time"
                    android:layout_toRightOf="@+id/updateDevice_device_name_textView"
                    android:layout_toEndOf="@+id/updateDevice_device_name_textView" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Minutos"
                    android:id="@+id/updateDevice_radio_minutos"
                    android:checked="false"
                    android:onClick="onRadioButtonClicked"
                    android:textColor="@color/AppThemeColor"
                    android:layout_alignTop="@+id/updateDevice_radio_horas"
                    android:layout_toRightOf="@+id/updateDevice_device_pot_textView"
                    android:layout_toEndOf="@+id/updateDevice_device_pot_textView" />
            </RadioGroup>

            <TextView
                android:id="@+id/updateDevice_device_period_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Por um período de (dias): "
                android:textColor="@color/AppThemeColor"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@+id/updateDevice_radio_group"
                android:layout_alignLeft="@+id/updateDevice_device_pot_textView"
                android:layout_alignStart="@+id/updateDevice_device_pot_textView" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/updateDevice_device_period"
                android:text="30"
                android:textColorHighlight="@color/textColorHighlight"
                android:textColor="@color/AppThemeColor"
                android:shadowColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_below="@+id/updateDevice_device_period_textView"
                android:layout_alignLeft="@+id/updateDevice_device_time_textView"
                android:layout_alignStart="@+id/updateDevice_device_time_textView"
                android:layout_toStartOf="@+id/updateDevice_radio_group"
                android:layout_alignRight="@+id/updateDevice_device_pot"
                android:layout_alignEnd="@+id/updateDevice_device_pot"
                android:singleLine="true"
                android:imeOptions="actionNext"
                />

            <TextView
                android:id="@+id/updateDevice_room_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Selecione o cômodo: "
                android:textColor="@color/AppThemeColor"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@+id/updateDevice_device_period"
                android:layout_alignLeft="@+id/updateDevice_device_pot_textView"
                android:layout_alignStart="@+id/updateDevice_device_pot_textView" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/updateDevice_spinnerRooms"
                android:layout_below="@+id/updateDevice_room_textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <ImageSwitcher
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:id="@+id/updateDevice_imageSwitcher"
                android:layout_below="@+id/updateDevice_spinnerRooms"
                android:layout_centerHorizontal="true"
                android:foregroundGravity="center_horizontal"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:text="@string/btn_previous"
                android:id="@+id/updateDevice_btn_previous"
                android:textColor="@color/WHITE"
                android:background="@color/AppThemeColor"
                android:onClick="updateDevice_actionPrevious"
                android:layout_below="@id/updateDevice_imageSwitcher"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="83dip"
                android:layout_marginStart="83dip"
                android:layout_marginRight="3dip"
                />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:text="@string/btn_next"
                android:id="@+id/updateDevice_btn_next"
                android:textColor="@color/WHITE"
                android:background="@color/AppThemeColor"
                android:onClick="updateDevice_actionNext"
                android:layout_below="@id/updateDevice_imageSwitcher"
                android:layout_toRightOf="@+id/updateDevice_btn_previous"
                android:layout_toEndOf="@+id/updateDevice_btn_previous" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/abc_action_button_min_width_material"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/updateDevice_btn_previous"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/updateDevice_powerUnit_spinner"
                android:layout_below="@+id/updateDevice_device_pot_textView"
                android:layout_toEndOf="@+id/updateDevice_device_pot"
                android:layout_above="@+id/updateDevice_number" />

        </RelativeLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="@dimen/abc_action_button_min_width_material"
        android:text="@string/edit_device"
        android:id="@+id/btn_edit_device"
        android:textColor="@color/WHITE"
        android:background="@color/AppThemeColor"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>